fix: ui updates and viewer html updates

--- a/packages/extension/src/settings.html
+++ b/packages/extension/src/settings.html
@@ -152,6 +152,13 @@
                         <button class="test-button" id="testStaticGateway" disabled>Test</button>
                       </div>
                     </div>
+                    
+                    <div class="apply-static-gateway" id="applyStaticGatewayContainer" style="display: none;">
+                      <button class="btn btn-primary" id="applyStaticGateway">
+                        Apply Static Gateway
+                      </button>
+                      <p class="apply-hint">Gateway tested successfully. Click to apply this configuration.</p>
+                    </div>
                   </div>
                 </div>
               </div>
