--- a/packages/extension/src/popup.html
+++ b/packages/extension/src/popup.html
@@ -62,27 +62,7 @@
           </div>
         </section>
 
-        <!-- Verified Browsing Toggle -->
-        <section class="verified-browsing-section">
-          <div class="feature-card">
-            <div class="feature-header">
-              <div class="feature-content">
-                <svg class="feature-icon" width="32" height="32" viewBox="0 0 36 36" fill="none">
-                  <path d="M30 19.5C30 27 24.75 30.75 18.51 32.925C18.1832 33.0357 17.8283 33.0304 17.505 32.91C11.25 30.75 6 27 6 19.5V9C6 8.60218 6.15804 8.22064 6.43934 7.93934C6.72064 7.65804 7.10218 7.5 7.5 7.5C10.5 7.5 14.25 5.7 16.86 3.42C17.1778 3.1485 17.582 2.99933 18 2.99933C18.418 2.99933 18.8222 3.1485 19.14 3.42C21.765 5.715 25.5 7.5 28.5 7.5C28.8978 7.5 29.2794 7.65804 29.5607 7.93934C29.842 8.22064 30 8.60218 30 9V19.5Z" stroke="var(--colors-icons-iconHigh)" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
-                  <path d="M13.5 18L16.5 21L22.5 15" stroke="var(--colors-icons-iconHigh)" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
-                </svg>
-                <div class="feature-info">
-                  <div class="feature-label">Verified Browsing</div>
-                  <div class="feature-description">Enable cryptographic verification.</div>
-                </div>
-              </div>
-              <div class="toggle-switch">
-                <input type="checkbox" id="verifiedBrowsingToggle">
-                <span class="toggle-slider"></span>
-              </div>
-            </div>
-          </div>
-        </section>
+        <!-- Removed: Verified Browsing Toggle - verification features removed -->
 
         <!-- Current Strategy Section -->
         <section class="current-strategy-section">
