--- a/packages/extension/src/gateways.html
+++ b/packages/extension/src/gateways.html
@@ -32,7 +32,7 @@
             </button>
             <div class="header-title">
               <h1>Gateway Registry</h1>
-              <p>Manage gateway connections</p>
+              <p>View networked gateway details.</p>
             </div>
           </div>
           
