--- a/packages/extension/src/popup.html
+++ b/packages/extension/src/popup.html
@@ -128,7 +128,7 @@
               </svg>
               <div class="nav-content">
                 <h3>Gateways</h3>
-                <p>Manage gateway connections.</p>
+                <p>View networked gateway details.</p>
               </div>
               <svg class="nav-arrow" width="32" height="32" viewBox="0 0 36 36" fill="none">
                 <path d="M13.5 27L22.5 18L13.5 9" stroke="var(--colors-icons-iconMid)" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
