fix: cleans up settings and adds total stake

--- a/packages/extension/src/gateways.html
+++ b/packages/extension/src/gateways.html
@@ -69,8 +69,8 @@
             </div>
             <div class="stat-card">
               <div class="stat-content">
-                <div class="stat-value" id="fastestGateway">--</div>
-                <div class="stat-label">Fastest Gateway</div>
+                <div class="stat-value" id="networkStake">--</div>
+                <div class="stat-label">Network Stake</div>
               </div>
             </div>
           </div>
