--- a/packages/extension/src/settings.html
+++ b/packages/extension/src/settings.html
@@ -13,6 +13,7 @@
     />
     <link rel="stylesheet" href="assets/css/variables.css" />
     <link rel="stylesheet" href="assets/css/settings.css" />
+    <link rel="stylesheet" href="assets/css/gateways-enhanced.css" />
     <script type="module" src="settings.js"></script>
   </head>
   <body>
