chore: fix gateway details header

--- a/packages/extension/src/gateways.html
+++ b/packages/extension/src/gateways.html
@@ -152,18 +152,18 @@
     <div id="gatewayModal" class="modal">
       <div class="modal-content">
         <div class="modal-header">
-          <div class="modal-title-section" style="display: flex; align-items: center; gap: 12px;">
-            <h2>Gateway Details</h2>
+          <h2>Gateway Details</h2>
+          <div class="modal-header-actions">
             <div class="gateway-status-badge" id="modalStatusBadge">
               <div class="status-dot"></div>
               <span>Unknown</span>
             </div>
+            <button class="close-btn" id="closeModal">
+              <svg width="32" height="32" viewBox="0 0 36 36" fill="none">
+                <path d="M27 9L9 27M9 9l18 18" stroke="var(--colors-icons-iconHigh)" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+              </svg>
+            </button>
           </div>
-          <button class="close-btn" id="closeModal">
-            <svg width="32" height="32" viewBox="0 0 36 36" fill="none">
-              <path d="M27 9L9 27M9 9l18 18" stroke="var(--colors-icons-iconHigh)" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
-            </svg>
-          </button>
         </div>
         
         <div class="modal-body">
