--- a/packages/extension/src/popup.html
+++ b/packages/extension/src/popup.html
@@ -41,10 +41,10 @@
         <!-- Stats Section -->
         <section class="stats-section">
           <div class="stats-grid">
-            <div class="stat-card">
+            <div class="stat-card" title="Active gateways with zero consecutive failed network epochs">
               <div class="stat-content">
-                <div class="stat-value" id="activeGatewayCount">--</div>
-                <div class="stat-label">Active Gateways</div>
+                <div class="stat-value" id="healthyGatewayCount">--</div>
+                <div class="stat-label">Healthy Gateways</div>
               </div>
             </div>
             <div class="stat-card">
