fix(extension): update extension with latest wayfinder-core alpha

--- a/packages/extension/src/popup.html
+++ b/packages/extension/src/popup.html
@@ -193,7 +193,7 @@
               </svg>
             </a>
           </div>
-          <div class="version-info" id="extensionVersion">v0.1.0</div>
+          <div class="version-info" id="extensionVersion"></div>
         </div>
       </footer>
     </div>
