--- a/packages/extension/src/gateways.html
+++ b/packages/extension/src/gateways.html
@@ -149,7 +149,7 @@
               </svg>
             </a>
           </div>
-          <div class="version-info" id="extensionVersion">v0.1.0</div>
+          <div class="version-info" id="extensionVersion"></div>
         </div>
       </footer>
     </div>
