fix(extension): remove duplicate listeners, other performance improvements

--- a/packages/wayfinder-extension/src/popup.html
+++ b/packages/wayfinder-extension/src/popup.html
@@ -82,7 +82,7 @@
               <path d="M13.842 19.722L12.4575 20.2965" stroke="var(--colors-icons-iconHigh)" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
             </svg>
             <div class="strategy-content">
-              <div class="strategy-label" id="currentStrategy">Fastest Ping</div>
+              <div class="strategy-label" id="currentStrategy">Balanced</div>
               <div class="strategy-description">Routing strategy.</div>
             </div>
             <svg class="nav-arrow" width="32" height="32" viewBox="0 0 36 36" fill="none">
@@ -93,28 +93,6 @@
             </svg>
           </div>
         </section>
-
-        <!-- Current Verification Section 
-        <section class="current-verification-section">
-          <div class="verification-card">
-            <div class="verification-header">
-              <svg class="verification-icon" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
-                <path d="M12 22s8-4 8-10V5l-8-3-8 3v7c0 6 8 10 8 10z"/>
-                <path d="M9 12l2 2 4-4"/>
-              </svg>
-              <div class="verification-content">
-                <div class="verification-label">Data Verification</div>
-                <div class="verification-name" id="currentVerification">Background Mode</div>
-              </div>
-              <button class="change-verification-btn" id="changeVerification">
-                <svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
-                  <path d="M12 20h9"/>
-                  <path d="M16.5 3.5a2.12 2.12 0 0 1 3 3L7 19l-4 1 1-4Z"/>
-                </svg>
-              </button>
-            </div>
-          </div>
-        </section>-->
 
         <!-- Navigation Section -->
         <section class="navigation-section">
