fix(extension): do not enable toasts by default

--- a/packages/wayfinder-extension/src/settings.html
+++ b/packages/wayfinder-extension/src/settings.html
@@ -272,7 +272,7 @@
                   <p>Show toast notifications when content is remotely verified</p>
                 </div>
                 <label class="toggle-switch">
-                  <input type="checkbox" id="showVerificationToasts" checked>
+                  <input type="checkbox" id="showVerificationToasts">
                   <span class="toggle-slider"></span>
                 </label>
               </div>
